bdr.BDR2.scala.error
Compilation error:
BDR2:2: error: not found: value c
c=readMessage()
^BDR2:4: error: not found: value c
  c match {
  ^BDR2:5: error: not found: value ==
    case c=="R" => right() ; forward()
          ^BDR2:6: error: not found: value ==
    case c=="L" => left() ; forward()
          ^BDR2:7: error: not found: value ==
    case c=="I" => left() ; left() ; forward()
          ^BDR2:8: error: not found: value ==
    case c=="A" => forward()
          ^BDR2:9: error: not found: value ==
    case c=="B" => forward() ; forward()
          ^BDR2:10: error: not found: value ==
    case c=="C" => forward() ; forward() ; forward()
          ^BDR2:11: error: not found: value ==
    case c=="Z" => backward()
          ^BDR2:12: error: not found: value ==
    case c=="Y" => backward() ; backward()
          ^BDR2:13: error: not found: value ==
    case c=="X" => backward() ; backward() ; backward()
          ^BDR2:14: error: not found: value ==
    case c=="D" => forward() ; forward() ; forward() ; forward()
          ^BDR2:15: error: not found: value ==
    case c=="E" => forward() ; forward() ; forward() ; forward() ; forward()
          ^BDR2:16: error: not found: value ==
    case c=="F" => forward() ; forward() ; forward() ; forward() ; forward() ; forward()
          ^BDR2:17: error: not found: value ==
    case c=="W" => backward() ; backward() ; backward() ; backward()
          ^BDR2:18: error: not found: value ==
    case c=="V" => backward() ; backward() ; backward() ; backward() ; backward()
          ^BDR2:19: error: not found: value ==
    case c=="U" => backward() ; backward() ; backward() ; backward() ; backward() ; backward()
          ^